SUBDIRS = widgets sdl

AM_CPPFLAGS = -I$(top_srcdir)/guichan

noinst_LIBRARIES = libguichan.a

libguichan_a_LIBADD = widgets/libguichan_widgets.a sdl/libguichan_sdl.a

#libguichan_a_DEPENDENCIES = \
#	widgets/libguichan_widgets.a \
#        sdl/libguichan_sdl.a

# The Guichan library sources
libguichan_a_SOURCES = 	\
	actionevent.cpp		\
	basiccontainer.cpp	\
	cliprectangle.cpp	\
	color.cpp		\
	defaultfont.cpp		\
	event.cpp		\
	exception.cpp		\
	focushandler.cpp	\
	font.cpp		\
	graphics.cpp		\
	gui.cpp			\
	guichan.cpp		\
	image.cpp		\
	imagefont.cpp		\
	inputevent.cpp		\
	key.cpp			\
	keyevent.cpp		\
	keyinput.cpp		\
	mouseevent.cpp		\
	mouseinput.cpp		\
	rectangle.cpp		\
	widget.cpp \
	actionevent.hpp \
	actionlistener.hpp \
	basiccontainer.hpp \
	cliprectangle.hpp \
	color.hpp \
	deathlistener.hpp \
	defaultfont.hpp \
	event.hpp \
	exception.hpp \
	focushandler.hpp \
	font.hpp \
	graphics.hpp \
	gui.hpp \
	imagefont.hpp \
	image.hpp \
	imageloader.hpp \
	inputevent.hpp \
	input.hpp \
	keyevent.hpp \
	key.hpp \
	keyinput.hpp \
	keylistener.hpp \
	listmodel.hpp \
	mouseevent.hpp \
	mouseinput.hpp \
	mouselistener.hpp \
	platform.hpp \
	rectangle.hpp \
	sdl.hpp \
	widget.hpp
