AM_CPPFLAGS = -DPKG_DATA_DIR="\"$(pkgdatadir)/\"" -I$(top_srcdir)/guichan

INCLUDES = -I$(top_srcdir)/guichan

noinst_LIBRARIES = libengine.a

libengine_a_SOURCES = \
	actions.cpp \
	actions.h \
	animations.cpp \
	animations.h \
	canvas.cpp \
	canvas.h \
	coordinate.cpp \
	coordinate.h \
	extensions.cpp \
	extensions.h \
	game.cpp \
	game.h \
	messages.cpp \
	messages.h \
	planets.cpp \
	planets.h \
	players.cpp \
	players.h \
	selection.cpp \
	selection.h \
	ships.cpp \
	ships.h \
	stars.cpp \
	stars.h \
	universe.cpp \
	universe.h \
	timer.cpp \
	timer.h
