#noinst_LTLIBRARIES = libsdl.la

noinst_LIBRARIES = libguichan_sdl.a

INCLUDES = -I$(top_srcdir)/guichan

libguichan_sdl_a_SOURCES =	\
	sdl.cpp			\
	sdlgraphics.cpp		\
	sdlimage.cpp		\
	sdlimageloader.cpp	\
	sdlinput.cpp \
	sdlgraphics.hpp \
	sdlimage.hpp \
	sdlimageloader.hpp \
	sdlinput.hpp \
	sdlpixel.hpp

