noinst_LIBRARIES = libguichan_widgets.a

INCLUDES = -I$(top_srcdir)/guichan

libguichan_widgets_a_SOURCES = \
	button.cpp		\
	checkbox.cpp		\
	container.cpp		\
	dropdown.cpp		\
	icon.cpp		\
	label.cpp		\
	listbox.cpp		\
	radiobutton.cpp		\
	scrollarea.cpp		\
	slider.cpp		\
	textbox.cpp		\
	textfield.cpp		\
	window.cpp \
	button.hpp \
	checkbox.hpp \
	container.hpp \
	dropdown.hpp \
	icon.hpp \
	label.hpp \
	listbox.hpp \
	radiobutton.hpp \
	scrollarea.hpp \
	slider.hpp \
	textbox.hpp \
	textfield.hpp \
	window.hpp

